# simlar-ios

./: .clang-format  .gitignore  .travis.yml  AUTHORS  Podfile  README.md  bootstrap-liblinphone.sh  compile-liblinphone.sh  create-app-icon.sh  create-tag.sh  resize_images.sh  update-version.sh
.github/workflows/: ios.yml  simlar-ios-ci.yml
Simlar/: Simlar-Info.plist  Simlar-Prefix.pch  main.m
Simlar.xcodeproj/: project.pbxproj
Simlar.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Simlar.xcworkspace/: contents.xcworkspacedata
Simlar/Base.lproj/: LaunchScreen.xib  Main.storyboard  Main_iPad.storyboard  Main_iPhone.storyboard
Simlar/Settings.bundle/: About.plist  Acknowledgements.plist  LinphoneAcknowledgements.plist  PodsAcknowledgements.plist  Root.plist
Simlar/resources/: simlarca.der
Simlar/src/: SMLRAddressBookViewController.h  SMLRAddressBookViewController.m  SMLRAesUtil.h  SMLRAesUtil.m  SMLRAgreeViewController.h  SMLRAgreeViewController.m  SMLRAlert.h  SMLRAlert.m  SMLRAppDelegate.h  SMLRAppDelegate.m  SMLRAudioOutputType.h  SMLRAudioOutputType.m  SMLRBrowser.h  SMLRBrowser.m  SMLRCallSoundManager.h  SMLRCallSoundManager.m  SMLRCallStatus.h  SMLRCallStatus.m  SMLRCallViewController.h  SMLRCallViewController.m  SMLRContact.h  SMLRContact.m  SMLRContacts.h  SMLRContacts.m  SMLRContactsProvider.h  SMLRContactsProvider.m  SMLRContactsProviderStatus.h  SMLRCreateAccount.h  (+66 more)
SimlarTests/: SimlarTests-Info.plist  SimlarTests.m
liblinphone/: linphone-sdk.podspec
liblinphone-sdk/apple-darwin/include/polarssl/: Makefile.am  bn_mul.h  ssl.h
(+113 files in other folders)
