polarssldir=$(includedir)/polarssl

polarssl_HEADERS=aes.h        base64.h    camellia.h     config.h    dhm.h           gcm.h        md4.h      net.h      pem.h     sha2.h       timing.h     xtea.h \
	arc4.h       bignum.h    certs.h        ctr_drbg.h  entropy.h       havege.h     md5.h      openssl.h  pkcs11.h  sha4.h       version.h \
	asn1.h       blowfish.h  cipher.h       debug.h     entropy_poll.h  Makefile.am  md.h       padlock.h  rsa.h     ssl_cache.h  x509.h \
	asn1write.h  bn_mul.h    cipher_wrap.h  des.h       error.h         md2.h        md_wrap.h  pbkdf2.h   sha1.h    ssl.h        x509write.h 


EXTRA_DIST=$(polarssl_HEADERS)
